--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,42 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+alembic==1.14.0
 annotated-types==0.7.0
 asyncpg==0.30.0
+attrs==24.2.0
+beautifulsoup4==4.12.3
 black==24.10.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+frozenlist==1.5.0
 greenlet==3.1.1
+idna==3.10
 isort==5.13.2
+Mako==1.3.6
+MarkupSafe==3.0.2
+multidict==6.1.0
 mypy-extensions==1.0.0
+numpy==2.1.3
 packaging==24.2
+pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.6
+propcache==0.2.0
 pydantic==2.10.1
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+six==1.16.0
+soupsieve==2.6
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+xlrd==2.0.1
+yarl==1.18.0
